--- a/index.html
+++ b/index.html
@@ -86,8 +86,14 @@
             <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div> -->
             <h2 class="h4 fw-bolder">Profile</h2>
             <p>
-              I am a man student named Seprianus Resky Massora. I am a fifth-semester student majoring in Information System at Makassar Dipa University. I enjoy studying things related to mobile programming and web programming. I am a student with a high learning spirit, especially learn about information technology.
-            </p>
+              Seprianus Resky Massora or familiarly called Resky, is a person
+        student from Dipa University Makassar. Currently underway
+        education at the Dipa University Information Systems Study Program
+        Makassar. Have a strong desire to have a career in the IT field
+        especially becoming a software engineer. Currently focusing on
+        study knowledge in the field of IT, especially web frontend and
+        mobile-based application development.
+              </p>
             <!-- <a class="text-decoration-none" href="#!">
                             Call to action
                             <i class="bi bi-arrow-right"></i>
