--- a/index.html
+++ b/index.html
@@ -86,13 +86,7 @@
             <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div> -->
             <h2 class="h4 fw-bolder">Profile</h2>
             <p>
-              Seprianus Resky Massora or familiarly called Resky, is a person
-        student from Dipa University Makassar. Currently underway
-        education at the Dipa University Information Systems Study Program
-        Makassar. Have a strong desire to have a career in the IT field
-        especially becoming a software engineer. Currently focusing on
-        study knowledge in the field of IT, especially web frontend and
-        mobile-based application development.
+             Perkenalkan, saya Seprianus Resky Massora, merupakan seorang Mahasiswa jurusan sistem informasi dari Universitas Dipa Makassar. Saya merupakan mahasiswa yang memiliki semangat belajar khususnya mempelajari beberapa hal mengenai teknologi informasi seperti desain ui ux, pemrograman web, dan pemrograman mobile. 
               </p>
             <!-- <a class="text-decoration-none" href="#!">
                             Call to action
