--- a/index.html
+++ b/index.html
@@ -235,6 +235,18 @@
                 </div>
               </div>
             </div>
+
+            <!-- Certificate 4-->
+            <div class="col-lg-6 col-xl-4">
+              <div class="card mb-5 mb-xl-0">
+                <div class="card-body p-5">
+                  <div class="small text-uppercase fw-bold text-muted mb-3">
+                    Sertifikat Peserta Pertukaran Mahasiswa Merdeka
+                  </div>
+                  <embed type="application/pdf" src="assets/sertifikat/sertifikat PMM.pdf" width="100%" height="auto">
+                </div>
+              </div>
+            </div>
   
           </div>
         </div>
